BE#67 Improve multer error validation
